# DataForGood-chicago

./: .gitignore  .pre-commit-config.yaml  GIS  LICENSE  README.md  backend-get-data.ipynb  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: format-and-fail.yml
GIS/: README.md
back-end/: README.md
backend-data-downloaded/: acs_data_2015.csv  acs_data_2018.csv  householdType_2015.csv  householdType_2016.csv  householdType_2017.csv  householdType_2019.csv
backend/backend-data-downloaded/: acs_data_2016.csv  acs_data_2017.csv  acs_data_2019.csv
data_visualization/: README.md
dataforgood/: admin_login_info.text  asgi.py  db.sqlite3  manage.py  settings.py  urls.py
dataforgood/dataforgood/: asgi.py  settings.py  urls.py  wsgi.py
dataforgood/main/: admin.py  forms.py  models.py  models2.py  tests.py  urls.py  utils.py  views.py
dataforgood/main/backend/: API_code.ipynb
dataforgood/main/censustracts/: censustracts.dbf  censustracts.prj
dataforgood/main/communityarea/: communityarea.dbf
dataforgood/main/data_pipeline/: API_code.ipynb  tracts_mapping.py
dataforgood/main/templates/: aboutus.html  dataandvisualize.html  resources.html  style.css
dataforgood/static/css/: style.css
dataforgood/staticfiles/css/: header.css  style.css
dfg_chi/backend/: API_code.ipynb  data_cleaning.ipynb  draft.py  variables.json
docs/: README.md  architecture.md  changelog.md  index.md  models.md  retrospective.md
docs/decisions/: README.md
docs/endpoints/: endpoints.md
front-end/: README.md
tests/: README.md
(+672 files in other folders)
