[tool.poetry]
name = "dataforgood-chicago"
version = "0.1.0"
description = "Data For Good Project"
authors = ["Bryan Foo Suon Chuang <foosuonchuang@uchicago.edu>","Yujie Jiang <yujie0706@uchicago.edu>", "Ruoyi Wu <ruoyiwu@uchicago.edu>", "Yueyue Wang <yueyue@uchicago.edu>", "Maxine Xu <maxinexu@uchicago.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
requests = "^2.31.0"
census = "^0.8.21"
pandas = "^2.2.2"
psycopg2-binary = "2.9.6"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
geopandas = "^0.14.4"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
folium = "^0.16.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.6"
python-docx = "^1.1.2"
langchain = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
